--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <script type="module" src="src/main.js" defer></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Todo or not todo?</title>
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/main.js"></script>
   </body>
 </html>
