--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Todo or not todo?</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <h1>OMG jag måste göra saker!</h1>
+    </div>
   </body>
 </html>
