wow är jag snart klar?

--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
     <title>Todo or not todo?</title>
   </head>
   <body>
+    <h1>OMG jag har en massa saker jag måste göra!</h1>
     <div id="app">
-      <h1>OMG jag måste göra saker!</h1>
+      <section id="todo-container">
+        <h2 id="list-header">Kvar att göra:</h2>
+      </section>
+      <section id="done-container">
+        <h2 id="alldone-list-header">Saker som är klara:</h2>
+      </section>
     </div>
   </body>
 </html>
