--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <h1>OMG jag har en massa saker jag måste göra!</h1>
+
     <div id="app">
       <section id="todo-container">
         <h2 id="list-header">Kvar att göra:</h2>
@@ -17,5 +18,16 @@
         <h2 id="alldone-list-header">Saker som är klara:</h2>
       </section>
     </div>
+
+    <section id="input-container">
+      <h2>Vill du lägga till ännu fler saker att göra?</h2>
+      <label for="user-input-name">Vad behöver göras?</label>
+      <input type="text" id="user-input-name" />
+      <label for="user-input-description">Och vad innebär det?</label>
+      <input type="text" id="user-input-description" />
+      <label for="user-input-deadline">Okej, när ska det vara klart?</label>
+      <input type="text" id="user-input-deadline" />
+      <button id="save-btn">Lägg till ny sak</button>
+    </section>
   </body>
 </html>
