--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     <section id="input-container">
       <h2>Vill du lägga till ännu fler saker att göra?</h2>
       <label for="user-input-name">Vad behöver göras?</label>
-      <input type="text" id="user-input-name" />
+      <input type="text" id="user-input-name" class="text-input" />
       <label for="user-input-description">Och vad innebär det?</label>
-      <input type="text" id="user-input-description" />
+      <input type="text" id="user-input-description" class="text-input" />
       <label for="user-input-deadline">Okej, när ska det vara klart?</label>
-      <input type="text" id="user-input-deadline" />
+      <input type="text" id="user-input-deadline" class="text-input" />
       <button id="save-btn">Lägg till ny sak</button>
     </section>
   </body>
