the finished product

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <input type="text" id="user-input-description" class="text-input" />
       <label for="user-input-deadline">Okej, när ska det vara klart?</label>
       <input type="text" id="user-input-deadline" class="text-input" />
-      <button id="save-btn">Lägg till ny sak</button>
+      <button id="btn--save">Lägg till ny sak</button>
     </section>
   </body>
 </html>
