--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <script type="module" src="src/main.js" defer></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Todo or not todo?</title>
+    <title>Todo or toDONE?</title>
   </head>
   <body>
     <h1>OMG jag har en massa saker jag måste göra!</h1>
