--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="stylesheet" href="src/style.css" />
     <script type="module" src="src/main.js" defer></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Todo or toDONE?</title>
