--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="stylesheet" href="src/style.css" />
-    <script type="module" src="src/main.js" defer></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Todo or toDONE?</title>
   </head>
@@ -30,5 +29,7 @@
       <input type="text" id="user-input-deadline" class="text-input" />
       <button id="btn--save">Lägg till ny sak</button>
     </section>
+
+    <script type="module" src="src/main.js"></script>
   </body>
 </html>
